syntax = "proto3";

package fileserver;

service FileServerService {
  rpc GetFile (stream GetRequest) returns (stream GetResponse);
  rpc Upload (stream UploadRequest) returns (stream UploadResponse);
}

message ErrorResponse {
  string request_id = 1;
  string message = 2;
  int32 code = 3;
}

message UploadRequest {
  oneof message {
    RegisterUploadRequest register = 1;
    FileChunkRequest chunk = 2;
    UploadRequestCompleted complete = 3;
  }
}

message RegisterUploadRequest {
  string request_id = 1;
  string file_name = 2;
  int32 ttl=3;
  string metadata = 4;
}

message FileChunkRequest {
  string request_id = 1;
  bytes content = 2;
}

message UploadRequestCompleted{
  string request_id = 1;
}

message UploadResponse {
  oneof message {
    RegisterUploadResponse register = 1;
    FileChunkResponse chunk = 2;
    FileSaved saved = 3;
    ErrorResponse error = 4;
  }
}

message RegisterUploadResponse {
  string request_id = 1;
}

message FileChunkResponse {
  string request_id = 1;
  bool success = 2;
}

message FileSaved {
  string request_id = 1;
}

message GetRequest {
  oneof message {
      GetRequestData file = 1;
      GetRequestStartSendChunks chunk = 2;
  }
}

message GetRequestData {
  string file_name = 1;
  string request_id = 2;
}

message GetRequestStartSendChunks {
  string request_id = 1;
  int64 chunk_size = 2;
}

message GetResponse {
  oneof message {
      GetResponseFileInfo file = 1;
      FileReadCompleted completed_data = 2;
      FileChunk chunk = 3;
      FileReadCompleted completed_chunks = 4;
      ErrorResponse error = 5;
  }
}
message GetResponseFileInfo {
  string request_id = 1;
  bool exists = 2;
  string metadata = 3;
  int64 file_size = 4;
}

message FileChunk {
  bytes content = 1;
  string request_id = 2;
}

message FileReadCompleted {
  string request_id = 1;
}


